create first MyFirstComponent

--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
   },
   "name": "complete-intro-to-react",
   "version": "3.0.0",
-  "description": "A Complete Intro to React workshop",
+  "description": "A Complete Intro to React workshop via Brian Holt and Frontend Masters.",
   "main": "server.js",
-  "repository": "git@github.com:btholt/complete-intro-to-react.git",
-  "author": "Brian Holt <btholt@gmail.com>",
+  "repository": "git@github.com:Shinobi881/complete-intro-to-react-v3.git",
+  "author": "Muhsin Abdul-Musawwir <moose.techguy@gmail.com>",
   "license": "MIT"
 }
